--- a/wp-content/themes/simplemag/style.css
+++ b/wp-content/themes/simplemag/style.css
@@ -14,9 +14,9 @@ audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
 audio:not([controls]){display:none;height:0}
 [hidden]{display:none}
 
-html {font-size:100%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-webkit-font-smoothing:antialiased;line-height:1.5;}
+html {font-size:100%;font-family:"azo-sans-web" !important;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-webkit-font-smoothing:antialiased;line-height:1.5;}
 
-body {margin:0; font-family:"azo-sans-web" !important; }
+body {margin:0; font-family:"azo-sans-web" !important; font-size: 13px; line-height: 18px; color: black; }
 
 a:focus{outline:thin dotted}
 a:hover,a:active{outline:0}
@@ -27,13 +27,13 @@ abbr[title]{border-bottom: 1px dotted}
 
 b,strong{font-weight:bold}
 
-blockquote{font-family:Georgia,"Times New Roman",Times,serif}
+blockquote{font-family: 'Noticia Text', serif;}
 
 dfn {font-style:italic}
 
 mark {background:#ff0;color:#000}
 
-p,pre{margin:0}
+p,pre{margin:0; font-family: 'Noticia Text', serif; font-size: 13px; line-height: 18px;}
 
 pre,code,kbd,samp{font-family:monospace,serif;_font-family:'courier new',monospace;font-size:1em}
 
@@ -389,12 +389,18 @@ input[type="password"] {
  * Colors
  */
 body {
-	color:#444;
+	color:#000;
+}
+a{
+	color:#000;
+	text-decoration: none;
 }
 
-a,
+
+
+p a,
 .title-with-sep{
-	color:#000;
+	color:#406f77;
 }
 
 .layout-boxed .site-content {
@@ -687,9 +693,7 @@ a,
 		position:absolute;
 		left:40%;
 		bottom:0;
-		border-width:0 10px 10px;
-		border-style:solid;
-		border-color:transparent transparent #000;
+ 
 		width:0;
 		z-index:999;
 		opacity:0;
@@ -1391,7 +1395,7 @@ body:not(.home) .masonry-layout .hentry {
  * Posts ( global )
  */
 .entry-header {
-	text-align:center;
+	text-align:left;
 }
 
 	.entry-header .entry-meta .author:after,
@@ -1412,7 +1416,7 @@ body:not(.home) .masonry-layout .hentry {
 	}
 
 .entries .hentry {
-	text-align:center;
+	text-align:left;
 }
 
 .entries .hentry .entry-meta {
@@ -1618,10 +1622,20 @@ figure:hover .image-caption {
  */
 .page-header {
 	margin-bottom:30px;
+
 }
 	.page-header .entry-meta {
-		margin-bottom:5px;
+		font-size: 20px; font-weight: bold;
+		margin-bottom:15px;
+		text-align: center; color: black;
 	}
+
+.page-header h1.entry-title{
+	font-size: 54px; line-height: 64px;
+	color: black; 
+}	
+
+.page-header .single-title{text-align: center;}
 
 .cat-description {
 	max-width:690px;
@@ -1671,8 +1685,8 @@ figure:hover .image-caption {
 
 /* Single Post & Page post */
 .single .entry-content {
-	margin-bottom:30px;
-	padding-bottom:30px;
+	margin-bottom:0px;
+	padding-bottom:15px;
 
 }
 
@@ -1904,7 +1918,7 @@ figure:hover .image-caption {
 .social-box {
 	padding-top:30px;
 	text-align:center;
-	border-top:3px solid #000;
+	border-top:1px solid #000;
 }
 
 .social-box li {
@@ -2436,7 +2450,8 @@ figure:hover .image-caption {
 #searchform input {
 	width:100%;
 	outline:none;
-	font-size:12px;
+	font-size:18px;
+	letter-spacing: 0;
 }
 
 #searchform button {
@@ -2467,8 +2482,10 @@ figure:hover .image-caption {
 
 #searchform button,
 #searchform input[type="text"] {
-	color:#fff;
-	background:#000;
+	color:black;
+	background:#fff;
+	border: 1px solid black;
+	font-weight: bold;
 }
 
 	#masthead .header-search #searchform input[type="text"],
@@ -2724,6 +2741,7 @@ span.wpcf7-not-valid-tip {
  */
 .sidebar {
 	padding:24px;
+	padding-top: 0px;
 }
 
 .sidebar-fixed {
@@ -3039,7 +3057,7 @@ html .col-1 .widget-area {border:none;}
 .widget_pages ul,
 .widget_nav_menu ul,
 .widget_categories ul {
-
+	padding-left: 15px;
 }
 
 .widget_rss li,
@@ -3066,8 +3084,7 @@ html .col-1 .widget-area {border:none;}
 .sidebar .widget_categories li,
 .sidebar .widget_recent_entries li,
 .sidebar .widget_recent_comments li {
-	border-top-width:1px;
-	border-top-style:solid;
+	
 }
 
 .widget_rss > ul > li:first-child,
@@ -3198,13 +3215,14 @@ html .col-1 .widget-area {border:none;}
 /* Meta & Archive */
 .widget_meta ul,
 .widget_archive ul {
-	padding-left:15px;
+	padding-left:10px;
 }
 
 .widget_meta li,
 .widget_archive li {
-	padding:5px;
-	list-style:square;
+	padding:5px 5px 5px 0;
+	list-style:none;
+	margin-left: 0;
 }
 
 .widget_archive select {
@@ -4175,3 +4193,44 @@ and (max-device-width:1024px) {
 }
 
 h3 { font-family: "azo-sans-web" !important; font-weight: 700 !important; font-size: 20px; line-height: 20px !important; display: inline; padding: 5px 10px; }
+
+h2.entry-title{
+	font-family: "azo-sans-web" !important; font-weight: bold; font-size: 20px; text-transform: uppercase;
+}
+
+.entries article{
+	padding-bottom: 20px;  
+	border-bottom: 1px solid black;
+}
+
+.authormeta{color: black;}
+
+a.read-more-link{text-transform: none; color: #888; margin-top: 5px;}
+
+.top-post h2.entry-title{
+	font-size: 54px; text-align: center;
+}
+.top-post .entry-meta {
+ 	text-align: center;
+	font-size: 20px; text-transform: uppercase; font-weight: bold; 
+}
+.top-post .entry-meta .authormeta{
+	color: white;
+
+}
+.top-post .entry-read-more{margin-top: 15px; text-transform: none;width: 100%; text-align: center;
+}
+.top-post .entry-read-more a{
+	color: white;
+	text-decoration: none;
+	text-transform: none;
+	font-style: italic;
+
+}
+
+.top-post article{
+	margin-bottom: -110px; 
+	padding-bottom: 0px;
+	border-bottom: none;
+
+}
