--- a/wp-content/themes/simplemag/style.css
+++ b/wp-content/themes/simplemag/style.css
@@ -323,7 +323,6 @@ input[type="submit"],
 	margin-right:20px;
 	padding-left:20px;
 	padding-right:20px;
-	background-color:#fff;
 }
 
 .format-bg .title-with-sep {
@@ -401,6 +400,7 @@ a{
 p a,
 .title-with-sep{
 	color:#406f77;
+	text-align: center;
 }
 
 .layout-boxed .site-content {
@@ -433,6 +433,10 @@ p a,
 .sidebar .widget_recent_comments li,
 .sidebar .widget_ti_latest_comments li a {
 	border-color:#ddd;
+}
+
+#outerWidgetContainer {
+	width: 100% !important;
 }
 
 .copyright {
@@ -693,7 +697,7 @@ p a,
 		position:absolute;
 		left:40%;
 		bottom:0;
- 
+
 		width:0;
 		z-index:999;
 		opacity:0;
@@ -1004,10 +1008,12 @@ html .main-menu > ul > li > .sub-menu {
 	margin-bottom:30px;
 }
 
+#content .entry-header .entry-title {  }
+
 /*
  * Footer
  */
-#footer {}
+#footer { margin-bottom: 80px; padding-top: 10px; border-top: 1px solid black; }
 
 #footer .advertisement {
 	margin:0;
@@ -1632,8 +1638,8 @@ figure:hover .image-caption {
 
 .page-header h1.entry-title{
 	font-size: 54px; line-height: 64px;
-	color: black; 
-}	
+	color: black;
+}
 
 .page-header .single-title{text-align: center;}
 
@@ -2801,6 +2807,7 @@ html .col-1 .widget-area {border:none;}
 .sidebar .widget {
 	margin-bottom:30px;
 	padding-bottom:30px;
+	border-bottom: 1px solid black;
 }
 	.sidebar .widget:last-child {
 		border:none;
@@ -3055,9 +3062,28 @@ html .col-1 .widget-area {border:none;}
 
 /* Custom Menu & Pages Widget & Categories & RSS */
 .widget_pages ul,
-.widget_nav_menu ul,
-.widget_categories ul {
+.widget_nav_menu ul {
 	padding-left: 15px;
+}
+
+.widget h3 {
+	padding-left: 0px;
+	margin-bottom: 25px;
+	float: left;
+	width: 100%;
+	text-align: left;
+}
+
+.widget_categories ul {
+	margin-top: 15px;
+}
+
+.widget_categories ul li {
+	padding-bottom: 0px !important;
+}
+
+.widget_categories ul li a {
+	text-transform: capitalize;
 }
 
 .widget_rss li,
@@ -3084,7 +3110,7 @@ html .col-1 .widget-area {border:none;}
 .sidebar .widget_categories li,
 .sidebar .widget_recent_entries li,
 .sidebar .widget_recent_comments li {
-	
+
 }
 
 .widget_rss > ul > li:first-child,
@@ -3209,6 +3235,7 @@ html .col-1 .widget-area {border:none;}
 .widget_ti_latest_reviews .score-line span {
 	height:5px;
 	margin-top:3px;
+	background: black;
 }
 
 
@@ -3527,13 +3554,16 @@ html .col-1 .widget-area {border:none;}
 	.format-posts .entry-image,
 	.related-posts .entry-image,
 	.category-posts .entry-image,
-	.featured-posts .entry-image,
 	.latest-reviews .entry-image {
-		height:400px;
+		height:200px;
+	}
+
+	.featured-posts .entry-image {
+		height: 670px;
 	}
 
 	.featured-posts .entry-header {
-		top: -240px;
+		top: -450px;
 		position: relative;
 		color: white !important;
 	}
@@ -3766,9 +3796,12 @@ and (max-device-width:1024px) {
 	.grid-layout .entry-image,
 	.format-posts .entry-image,
 	.category-posts .entry-image,
-	.featured-posts .entry-image,
 	.latest-reviews .entry-image {
-		height:400px;
+		height:200px;
+	}
+
+	.featured-posts .entry-image {
+		height: 670px;
 	}
 
 	.related-posts .item {
@@ -4199,8 +4232,10 @@ h2.entry-title{
 }
 
 .entries article{
-	padding-bottom: 20px;  
+	padding-bottom: 20px;
 	border-bottom: 1px solid black;
+	margin-bottom: 20px;
+	height: 400px;
 }
 
 .authormeta{color: black;}
@@ -4212,7 +4247,7 @@ a.read-more-link{text-transform: none; color: #888; margin-top: 5px;}
 }
 .top-post .entry-meta {
  	text-align: center;
-	font-size: 20px; text-transform: uppercase; font-weight: bold; 
+	font-size: 20px; text-transform: uppercase; font-weight: bold;
 }
 .top-post .entry-meta .authormeta{
 	color: white;
@@ -4229,8 +4264,100 @@ a.read-more-link{text-transform: none; color: #888; margin-top: 5px;}
 }
 
 .top-post article{
-	margin-bottom: -110px; 
 	padding-bottom: 0px;
 	border-bottom: none;
+	height: 670px;
+}
 
+.entry-title-type {
+	color: black;
+	font-size: 20px;
+	line-height: 28px;
+	margin: 20px 0;
+}
+
+.soundbar {
+	display: block;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 50px;
+}
+
+.soundbar .controls {
+	width: 300px;
+	float: left;
+	text-align: center;
+}
+
+.soundbar .controls i {
+	color: white;
+	margin: 17px;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.soundbar .controls .control {
+	display: inline;
+}
+
+.soundbar .controls .backward {
+	text-align: left;
+}
+
+.soundbar .controls .forward {
+	text-align: right;
+}
+
+.soundbar .controls .play {
+	text-align: center;
+}
+
+.soundbar .soundcloud i {
+	color: white;
+	margin: 6px;
+	display: block;
+	text-align: right;
+	font-size: 40px;
+}
+
+.artist-info {
+	color: white;
+	margin: 20px 0px;
+	display: block;
+	font-size: 12px;
+}
+
+.artist-info-song {
+	margin-right: 15px;
+}
+
+.artist-info-artist {
+	margin-left: 15px;
+	text-transform: uppercase;
+}
+
+#instafeed { margin-bottom: 25px; }
+
+#instafeed a { float: left; margin-right: 1px; }
+
+.insta-header { text-transform: uppercase; margin-top: 10px; }
+
+.social-icons {
+	list-style: none;
+	text-decoration:none;
+	display:inline-block;
+	float:left;
+	position: relative;
+	margin-top: 10px;
+}
+
+.social-icons li {
+	list-style: none;
+	text-decoration:none;
+	display:inline-block;
+	float:left;
+	position: relative;
+	font-size: 20px;
+	margin-right: 10px;
 }
